# knessy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  startup.py
.github/workflows/: ci.yml
agent/: grader.py  graph.py  judge.py  nodes.py  run.py  state.py
ingest/: ingest.py  opensearch_setup.py
mcp_server/: knesset_client.py  server.py
scripts/: export_snapshot.py  restore_snapshot.py
tests/: benchmark_cases.py  retrieval_cases.py  test_benchmark.py  test_benchmark_comparison.py  test_nodes.py  test_retrieval_eval.py
ui/: app.py
